cmake_minimum_required(VERSION 2.8)
project( RSPCN )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pthread -std=gnu++0x")
find_package( OpenCV REQUIRED )
find_package( OpenGL REQUIRED )
set(DEPENDENCIES realsense ${OPENGL_LIBRARIES})
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( RSPCN main.cpp )
target_link_libraries( RSPCN ${OpenCV_LIBS} ${DEPENDENCIES} X11)
